--- a/manual/emacspeak_002deww.html
+++ b/manual/emacspeak_002deww.html
@@ -1053,8 +1053,9 @@ interactive prefix arg ‘delete’, delete that mark instead.
       "index-emacspeak_002deww_002dplay_002dmedia_002dat_002dpoint-1"></span>
       <div class="format">
         <pre class="format">Play media url under point.
-Optional interactive prefix arg ‘playlist-p’ says to treat the link as a playlist.
- A second interactive prefix arg adds mplayer option -allow-dangerous-playlist-parsing
+Optional interactive prefix arg ‘playlist-p’ says to treat the
+ link as a playlist.  A second interactive prefix arg adds
+ mplayer option -allow-dangerous-playlist-parsing
 
 (fn &amp;optional PLAYLIST-P)
 </pre>
@@ -1622,21 +1623,6 @@ With interactive prefix arg, move to the start of the table.
   </dl>
   <dl>
     <dt id="index-User-Option-264">Variable: <strong>User
-    Option</strong> <em>emacspeak-eww-masquerade-as</em></dt>
-    <dd>
-      <p>User Agent string that is sent when masquerading is
-      on.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-265">Variable: <strong>User
-    Option</strong> <em>emacspeak-eww-silence-images</em></dt>
-    <dd>
-      <p>Set to nil if you want EWW to load images.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-266">Variable: <strong>User
     Option</strong> <em>voice-eww-form-checkbox</em></dt>
     <dd>
       <p>Personality used for eww-form-checkbox This personality
@@ -1645,7 +1631,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-267">Variable: <strong>User
+    <dt id="index-User-Option-265">Variable: <strong>User
     Option</strong> <em>voice-eww-form-file</em></dt>
     <dd>
       <p>Personality used for eww-form-file This personality uses
@@ -1654,7 +1640,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-268">Variable: <strong>User
+    <dt id="index-User-Option-266">Variable: <strong>User
     Option</strong> <em>voice-eww-form-select</em></dt>
     <dd>
       <p>Personality used for eww-form-select This personality uses
@@ -1663,7 +1649,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-269">Variable: <strong>User
+    <dt id="index-User-Option-267">Variable: <strong>User
     Option</strong> <em>voice-eww-form-submit</em></dt>
     <dd>
       <p>Personality used for eww-form-submit This personality uses
@@ -1672,7 +1658,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-270">Variable: <strong>User
+    <dt id="index-User-Option-268">Variable: <strong>User
     Option</strong> <em>voice-eww-form-text</em></dt>
     <dd>
       <p>Personality used for eww-form-text This personality uses
@@ -1681,7 +1667,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-271">Variable: <strong>User
+    <dt id="index-User-Option-269">Variable: <strong>User
     Option</strong> <em>voice-eww-form-textarea</em></dt>
     <dd>
       <p>Personality used for eww-form-textarea This personality
@@ -1690,7 +1676,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-272">Variable: <strong>User
+    <dt id="index-User-Option-270">Variable: <strong>User
     Option</strong> <em>voice-eww-invalid-certificate</em></dt>
     <dd>
       <p>Personality used for eww-invalid-certificate This
@@ -1700,7 +1686,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-273">Variable: <strong>User
+    <dt id="index-User-Option-271">Variable: <strong>User
     Option</strong> <em>voice-eww-valid-certificate</em></dt>
     <dd>
       <p>Personality used for eww-valid-certificate This
@@ -1709,7 +1695,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-274">Variable: <strong>User
+    <dt id="index-User-Option-272">Variable: <strong>User
     Option</strong> <em>voice-shr-selected-link</em></dt>
     <dd>
       <p>Personality used for shr-selected-link This personality
@@ -1718,7 +1704,7 @@ With interactive prefix arg, move to the start of the table.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-275">Variable: <strong>User
+    <dt id="index-User-Option-273">Variable: <strong>User
     Option</strong> <em>voice-shr-strike-through</em></dt>
     <dd>
       <p>Personality used for shr-strike-through This personality
