--- a/manual/Emacspeak-Commands-And-Options.html
+++ b/manual/Emacspeak-Commands-And-Options.html
@@ -983,7 +983,8 @@
       <td align="left" valign="top">• <a href=
       "emacspeak_002doutline.html">emacspeak-outline</a></td>
       <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top"></td>
+      <td align="left" valign="top">Speech enable Outline –
+      Browsing Structured Documents.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
@@ -1007,7 +1008,7 @@
       <td align="left" valign="top">• <a href=
       "emacspeak_002dpersonality.html">emacspeak-personality</a></td>
       <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top"></td>
+      <td align="left" valign="top">Voiceify Overlays.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
@@ -1119,12 +1120,6 @@
       <td>&nbsp;&nbsp;</td>
       <td align="left" valign="top">Speech enable RMail – Emacs’
       default mail agent.</td>
-    </tr>
-    <tr>
-      <td align="left" valign="top">• <a href=
-      "emacspeak_002drpm.html">emacspeak-rpm</a></td>
-      <td>&nbsp;&nbsp;</td>
-      <td align="left" valign="top">speech-enable RPM.</td>
     </tr>
     <tr>
       <td align="left" valign="top">• <a href=
