--- a/manual/emacspeak_002drpm_002dspec.html
+++ b/manual/emacspeak_002drpm_002dspec.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002drst.html" rel="next" title=
   "emacspeak-rst" />
-  <link href="emacspeak_002drpm.html" rel="prev" title=
-  "emacspeak-rpm" />
+  <link href="emacspeak_002drmail.html" rel="prev" title=
+  "emacspeak-rmail" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002drst.html" accesskey="n" rel=
     "next">emacspeak-rst</a>, Previous: <a href=
-    "emacspeak_002drpm.html" accesskey="p" rel=
-    "prev">emacspeak-rpm</a>, Up: <a href=
+    "emacspeak_002drmail.html" accesskey="p" rel=
+    "prev">emacspeak-rmail</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,7 +65,7 @@
   </div>
   <hr />
   <span id="emacspeak_002drpm_002dspec-1"></span>
-  <h3 class="section">12.158 emacspeak-rpm-spec</h3>
+  <h3 class="section">12.157 emacspeak-rpm-spec</h3>
   <p>speech-enable rpm-spec-mode –part of Emacs 21 on RH 7.3</p>
 </body>
 </html>
