--- a/manual/emacspeak_002drmail.html
+++ b/manual/emacspeak_002drmail.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002drpm.html" rel="next" title=
-  "emacspeak-rpm" />
+  <link href="emacspeak_002drpm_002dspec.html" rel="next" title=
+  "emacspeak-rpm-spec" />
   <link href="emacspeak_002drg.html" rel="prev" title=
   "emacspeak-rg" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002drmail"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002drpm.html" accesskey="n" rel=
-    "next">emacspeak-rpm</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002drpm_002dspec.html" accesskey=
+    "n" rel="next">emacspeak-rpm-spec</a>, Previous: <a href=
     "emacspeak_002drg.html" accesskey="p" rel=
     "prev">emacspeak-rg</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
