--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -829,6 +829,13 @@ value to the result.
       <p>Allow tones to be turned off.</p>
     </dd>
   </dl>
+  <dl>
+    <dt id="index-User-Option-10">Variable: <strong>User
+    Option</strong> <em>tts-notification-device</em></dt>
+    <dd>
+      <p>Virtual ALSA device to use for notifications stream.</p>
+    </dd>
+  </dl>
   <hr />
   <div class="header">
     <p>Next: <a href="dtk_002dunicode.html" accesskey="n" rel=
