--- a/manual/index.html
+++ b/manual/index.html
@@ -7085,17 +7085,10 @@
               </li>
             </ul>
           </li>
-          <li>
-            <a id="toc-emacspeak_002dsetup-1" href=
-            "emacspeak_002dsetup.html#emacspeak_002dsetup" name=
-            "toc-emacspeak_002dsetup-1">12.164 emacspeak-setup</a>
-            <ul class="no-bullet">
-              <li><a id="toc-emacspeak_002dsetup-Options" href=
-              "emacspeak_002dsetup.html#emacspeak_002dsetup-Options"
-              name="toc-emacspeak_002dsetup-Options">12.164.1
-              emacspeak-setup Options</a></li>
-            </ul>
-          </li>
+          <li><a id="toc-emacspeak_002dsetup-1" href=
+          "emacspeak_002dsetup.html#emacspeak_002dsetup" name=
+          "toc-emacspeak_002dsetup-1">12.164
+          emacspeak-setup</a></li>
           <li><a id="toc-emacspeak_002dsgml_002dmode-1" href=
           "emacspeak_002dsgml_002dmode.html#emacspeak_002dsgml_002dmode"
           name="toc-emacspeak_002dsgml_002dmode-1">12.165
