--- a/manual/emacspeak_002dsetup.html
+++ b/manual/emacspeak_002dsetup.html
@@ -72,31 +72,6 @@
   vanilla Emacs with just Emacspeak loaded. Once the above has been
   verified to work, You can add (load-library "emacspeak-setup") To
   your .emacs file. See tvr/emacs-startup.el in the Emacspeak Git
-  repository for my setup.</p><span id=
-  "emacspeak_002dsetup-Options"></span>
-  <h4 class="subsection">12.164.1 emacspeak-setup Options</h4>
-  <dl>
-    <dt id="index-User-Option-698">Variable: <strong>User
-    Option</strong> <em>dtk-startup-hook</em></dt>
-    <dd>
-      <p>List of hooks to be run after starting up the speech
-      server. Set things like speech rate, punctuation mode etc in
-      this hook.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-699">Variable: <strong>User
-    Option</strong> <em>emacspeak-startup-hook</em></dt>
-    <dd>
-      <p>Hook run after Emacspeak is started.</p>
-    </dd>
-  </dl>
-  <dl>
-    <dt id="index-User-Option-700">Variable: <strong>User
-    Option</strong> <em>tts-notification-device</em></dt>
-    <dd>
-      <p>Virtual ALSA device to use for notifications stream.</p>
-    </dd>
-  </dl>
+  repository for my setup.</p>
 </body>
 </html>
