--- a/announcements/on-defining-keys.html
+++ b/announcements/on-defining-keys.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-10-05 Mon 17:16 -->
+<!-- 2020-10-05 Mon 17:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>On Defining Keys In Emacs</title>
@@ -265,8 +265,8 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">On Defining Keys In Emacs</h1>
-<div id="outline-container-org59aaa9e" class="outline-2">
-<h2 id="org59aaa9e"><span class="section-number-2">1</span> Overview</h2>
+<div id="outline-container-org540a36d" class="outline-2">
+<h2 id="org540a36d"><span class="section-number-2">1</span> Overview</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Emacs is extremely flexible with respect to letting you bind keys to
@@ -299,8 +299,8 @@ If you look no further, you remain happy, but &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgf82184a" class="outline-2">
-<h2 id="orgf82184a"><span class="section-number-2">2</span> Function <code>kbd</code></h2>
+<div id="outline-container-org44745fc" class="outline-2">
+<h2 id="org44745fc"><span class="section-number-2">2</span> Function <code>kbd</code></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 But if you do peel the onion, here is what you  find:
@@ -321,8 +321,8 @@ code, feels fragile.</li>
 </div>
 
 
-<div id="outline-container-org3d1bb03" class="outline-2">
-<h2 id="org3d1bb03"><span class="section-number-2">3</span> Understanding And (Hopefully) Simplifying</h2>
+<div id="outline-container-org7a9ba62" class="outline-2">
+<h2 id="org7a9ba62"><span class="section-number-2">3</span> Understanding And (Hopefully) Simplifying  Function <code>kbd</code></h2>
 <div class="outline-text-2" id="text-3">
 <p>
   A simplified <code>ems-kbd</code> function that is free from the complexity
@@ -338,8 +338,8 @@ goal of creating an equivalent <code>kbd</code> function.
 </p>
 </div>
 
-<div id="outline-container-org57dd34f" class="outline-3">
-<h3 id="org57dd34f"><span class="section-number-3">3.1</span> Steps So Far</h3>
+<div id="outline-container-org4416bb1" class="outline-3">
+<h3 id="org4416bb1"><span class="section-number-3">3.1</span> Steps So Far</h3>
 <div class="outline-text-3" id="text-3-1">
 <ol class="org-ol">
 <li>Documented the implementation.</li>
@@ -370,7 +370,7 @@ have been used over the years.
 <div id="postamble" class="status">
 <p class="date">Date: 2020-10-05 Mon 00:00</p>
 <p class="author">Author: T.V Raman</p>
-<p class="date">Created: 2020-10-05 Mon 17:16</p>
+<p class="date">Created: 2020-10-05 Mon 17:23</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
