--- a/manual/emacspeak_002dperl.html
+++ b/manual/emacspeak_002dperl.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dpersonality.html" rel="next" title=
-  "emacspeak-personality" />
+  <link href="emacspeak_002dpianobar.html" rel="next" title=
+  "emacspeak-pianobar" />
   <link href="emacspeak_002dparadox.html" rel="prev" title=
   "emacspeak-paradox" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dperl"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dpersonality.html" accesskey="n"
-    rel="next">emacspeak-personality</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dpianobar.html" accesskey="n"
+    rel="next">emacspeak-pianobar</a>, Previous: <a href=
     "emacspeak_002dparadox.html" accesskey="p" rel=
     "prev">emacspeak-paradox</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
