--- a/manual/emacspeak_002dpianobar.html
+++ b/manual/emacspeak_002dpianobar.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dpopup.html" rel="next" title=
   "emacspeak-popup" />
-  <link href="emacspeak_002dpersonality.html" rel="prev" title=
-  "emacspeak-personality" />
+  <link href="emacspeak_002dperl.html" rel="prev" title=
+  "emacspeak-perl" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dpopup.html" accesskey="n" rel=
     "next">emacspeak-popup</a>, Previous: <a href=
-    "emacspeak_002dpersonality.html" accesskey="p" rel=
-    "prev">emacspeak-personality</a>, Up: <a href=
+    "emacspeak_002dperl.html" accesskey="p" rel=
+    "prev">emacspeak-perl</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,9 +65,9 @@
   </div>
   <hr />
   <span id="emacspeak_002dpianobar-1"></span>
-  <h3 class="section">12.140 emacspeak-pianobar</h3><span id=
+  <h3 class="section">12.139 emacspeak-pianobar</h3><span id=
   "PIANOBAR-_003d_003d-Pandora-Client-for-Emacs"></span>
-  <h4 class="subsection">12.140.1 PIANOBAR == Pandora Client for
+  <h4 class="subsection">12.139.1 PIANOBAR == Pandora Client for
   Emacs</h4>
   <p>pianobar git://github.com/PromyLOPh/pianobar.git
   Ubuntu/Debian: sudo apt-get install pianobar</p>
@@ -77,7 +77,7 @@
   Pandora Radio via pianobar from the comfort of Emacs. This module
   speech-enables Pianobar and enhances it for the Complete Audio
   Desktop.</p><span id="Emacspeak-Usage_003a"></span>
-  <h4 class="subsection">12.140.2 Emacspeak Usage:</h4>
+  <h4 class="subsection">12.139.2 Emacspeak Usage:</h4>
   <p>Emacspeak implements command emacspeak-pianobar, a
   light-weight wrapper on top of pianobar. Emacspeak binds this
   command to <code>C-e '</code>. Command emacspeak-pianobar is
@@ -98,9 +98,9 @@
   by pressing the Pianobar prefix key (<code>C-e '</code>) followed
   by keys from <code>pianobar-key-map</code>.</p><span id=
   "Emacspeak_002dPianobar-Commands"></span>
-  <h4 class="subsection">12.140.3 Emacspeak-Pianobar
+  <h4 class="subsection">12.139.3 Emacspeak-Pianobar
   Commands</h4><span id="emacspeak_002dpianobar-2"></span>
-  <h4 class="subsubsection">12.140.3.1 emacspeak-pianobar</h4>
+  <h4 class="subsubsection">12.139.3.1 emacspeak-pianobar</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar">Command:
     <strong>emacspeak-pianobar</strong></dt>
@@ -118,7 +118,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dpianobar_002dcommand"></span>
-  <h4 class="subsubsection">12.140.3.2
+  <h4 class="subsubsection">12.139.3.2
   emacspeak-pianobar-command</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dcommand">Command:
@@ -134,7 +134,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002delectric_002dmode_002dtoggle"></span>
-  <h4 class="subsubsection">12.140.3.3
+  <h4 class="subsubsection">12.139.3.3
   emacspeak-pianobar-electric-mode-toggle</h4>
   <dl>
     <dt id=
@@ -154,7 +154,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dnext_002dpreset"></span>
-  <h4 class="subsubsection">12.140.3.4
+  <h4 class="subsubsection">12.139.3.4
   emacspeak-pianobar-next-preset</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dnext_002dpreset">
@@ -169,7 +169,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dprevious_002dpreset"></span>
-  <h4 class="subsubsection">12.140.3.5
+  <h4 class="subsubsection">12.139.3.5
   emacspeak-pianobar-previous-preset</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dprevious_002dpreset">
@@ -184,7 +184,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
       </div>
     </dd>
   </dl><span id="emacspeak_002dpianobar_002dsend_002draw"></span>
-  <h4 class="subsubsection">12.140.3.6
+  <h4 class="subsubsection">12.139.3.6
   emacspeak-pianobar-send-raw</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dsend_002draw">Command:
@@ -203,7 +203,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dswitch_002dto_002dpreset"></span>
-  <h4 class="subsubsection">12.140.3.7
+  <h4 class="subsubsection">12.139.3.7
   emacspeak-pianobar-switch-to-preset</h4>
   <dl>
     <dt id=
@@ -221,7 +221,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dvolume_002ddown"></span>
-  <h4 class="subsubsection">12.140.3.8
+  <h4 class="subsubsection">12.139.3.8
   emacspeak-pianobar-volume-down</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dvolume_002ddown">
@@ -235,7 +235,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
       </div>
     </dd>
   </dl><span id="emacspeak_002dpianobar_002dvolume_002dup"></span>
-  <h4 class="subsubsection">12.140.3.9
+  <h4 class="subsubsection">12.139.3.9
   emacspeak-pianobar-volume-up</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dvolume_002dup">
@@ -253,8 +253,8 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
   <div class="header">
     <p>Next: <a href="emacspeak_002dpopup.html" accesskey="n" rel=
     "next">emacspeak-popup</a>, Previous: <a href=
-    "emacspeak_002dpersonality.html" accesskey="p" rel=
-    "prev">emacspeak-personality</a>, Up: <a href=
+    "emacspeak_002dperl.html" accesskey="p" rel=
+    "prev">emacspeak-perl</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
