--- a/manual/emacspeak_002dadvice.html
+++ b/manual/emacspeak_002dadvice.html
@@ -68,12 +68,11 @@
   <h3 class="section">12.14 emacspeak-advice</h3>
   <p>This module defines the advice forms for making the core of
   Emacs speak Advice forms that are specific to Emacs subsystems do
-  not belong here! I violate this at present by advising completion
-  comint and shell here.</p>
-  <p>Note that we needed to advice a lot more for Emacs 19 and
-  Emacs 20 than we do for Emacs 21 and Emacs 22. As of August 2007,
-  this file is being purged of advice forms not needed in Emacs
-  22.</p><span id="Emacspeak_002dAdvice-Commands"></span>
+  not belong here! I violate this at present by advising
+  completion. Note that we needed to advice a lot more for Emacs 19
+  and Emacs 20 than we do for Emacs 21 and Emacs 22. As of August
+  2007, this file is being purged of advice forms not needed in
+  Emacs 22.</p><span id="Emacspeak_002dAdvice-Commands"></span>
   <h4 class="subsection">12.14.1 Emacspeak-Advice
   Commands</h4><span id=
   "emacspeak_002deldoc_002dspeak_002ddoc"></span>
