--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -789,11 +789,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-C_002dq"><code>&lt;fn&gt;
+      "emacspeak_002dcomint.html#index-_003cfn_003e-C_002dq"><code>&lt;fn&gt;
       C-q</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
     </tr>
     <tr>
       <td></td>
@@ -1886,11 +1886,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
+      "emacspeak_002dcomint.html#index-_003cfn_003e-o"><code>&lt;fn&gt;
       o</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
     </tr>
     <tr>
       <td></td>
@@ -4268,11 +4268,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-C_002dq"><code>C-e
+      "emacspeak_002dcomint.html#index-C_002de-C_002dq"><code>C-e
       C-q</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5654,11 +5654,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-o"><code>C-e
+      "emacspeak_002dcomint.html#index-C_002de-o"><code>C-e
       o</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+      "emacspeak_002dcomint.html">emacspeak-comint</a></td>
     </tr>
     <tr>
       <td></td>
