--- a/manual/dtk_002dunicode.html
+++ b/manual/dtk_002dunicode.html
@@ -112,7 +112,7 @@ When called interactively, CHAR defaults to the character after point.
     Option</strong>
     <em>dtk-unicode-character-replacement-alist</em></dt>
     <dd>
-      <p>Explicit replacements for some characters.</p>
+      <p>Replacements for characters.</p>
     </dd>
   </dl>
   <dl>
@@ -128,14 +128,14 @@ When called interactively, CHAR defaults to the character after point.
     Option</strong> <em>dtk-unicode-process-utf8</em></dt>
     <dd>
       <p>Turn this off when working with TTS engines that handle
-      UTF8 themselves, e.g., when using an Asian language.</p>
+      UTF8.</p>
     </dd>
   </dl>
   <dl>
     <dt id="index-User-Option-14">Variable: <strong>User
     Option</strong> <em>dtk-unicode-untouched-charsets</em></dt>
     <dd>
-      <p>*Characters of these charsets are completely ignored by
+      <p>*Characters of these charsets are ignored by
       dtk-unicode-replace-chars.</p>
     </dd>
   </dl>
