--- a/manual/emacspeak_002dkeymap.html
+++ b/manual/emacspeak_002dkeymap.html
@@ -74,7 +74,7 @@
     <dt id="index-User-Option-404">Variable: <strong>User
     Option</strong> <em>emacspeak-alt-keys</em></dt>
     <dd>
-      <p>*Specifies alt key bindings for the audio desktop. You can
+      <p>Specifies alt key bindings for the audio desktop. You can
       turn the ‘Pause’ key on your Linux PC keyboard into a ‘alt’
       key on Linux by having it emit the sequence ‘C-x@a’.</p>
       <p>Bindings specified here are available on prefix key ‘alt’
@@ -94,7 +94,7 @@
     <dt id="index-User-Option-405">Variable: <strong>User
     Option</strong> <em>emacspeak-ctl-z-keys</em></dt>
     <dd>
-      <p>*Specifies ctl-z key bindings for the audio desktop.</p>
+      <p>Specifies ctl-z key bindings for the audio desktop.</p>
       <p>Bindings specified here are available on prefix key ‘C-z’
       for example, if you bind ‘zb’ to command ‘suspend-frame ’
       then that command will be available on key ‘C-z z’.</p>
@@ -111,7 +111,7 @@
     <dt id="index-User-Option-406">Variable: <strong>User
     Option</strong> <em>emacspeak-hyper-keys</em></dt>
     <dd>
-      <p>*Specifies hyper key bindings for the audio desktop. Emacs
+      <p>Specifies hyper key bindings for the audio desktop. Emacs
       can use the ‘hyper’ key as a modifier key. You can turn the
       ‘windows’ keys on your Linux PC keyboard into a ‘hyper’ key
       on Linux by having it emit the sequence ‘C-x@h’.</p>
@@ -131,7 +131,7 @@
     <dt id="index-User-Option-407">Variable: <strong>User
     Option</strong> <em>emacspeak-personal-ctlx-keys</em></dt>
     <dd>
-      <p>*Specifies personal-ctlx key bindings for use with C-e C-x
+      <p>Specifies personal-ctlx key bindings for use with C-e C-x
       for the audio desktop. Bindings specified here are available
       on prefix key C-e C-x for example, if you bind ‘C-s’ to
       command emacspeak-emergency-tts-restart then that command
@@ -149,7 +149,7 @@
     <dt id="index-User-Option-408">Variable: <strong>User
     Option</strong> <em>emacspeak-personal-keys</em></dt>
     <dd>
-      <p>*Specifies personal key bindings for the audio desktop.
+      <p>Specifies personal key bindings for the audio desktop.
       Bindings specified here are available on prefix key C-e x for
       example, if you bind ‘s’ to command
       emacspeak-emergency-tts-restart then that command will be
@@ -167,7 +167,7 @@
     <dt id="index-User-Option-409">Variable: <strong>User
     Option</strong> <em>emacspeak-super-keys</em></dt>
     <dd>
-      <p>*Specifies super key bindings for the audio desktop. You
+      <p>Specifies super key bindings for the audio desktop. You
       can turn the right ‘windows menu’ keys on your Linux PC
       keyboard into a ‘super’ key on Linux by having it emit the
       sequence ‘C-x@s’.</p>
