--- a/manual/amixer.html
+++ b/manual/amixer.html
@@ -84,7 +84,7 @@
     <dd>
       <span id="index-amixer-1"></span>
       <div class="format">
-        <pre class="format">Interactively manipulate ALSA settings.
+        <pre class="format">Manipulate ALSA settings.
 Interactive prefix arg refreshes cache.
 
 (fn &amp;optional REFRESH)
