--- a/manual/cd_002dtool.html
+++ b/manual/cd_002dtool.html
@@ -112,7 +112,7 @@ cap C   Save clip to disk
     <dt id="index-User-Option-1">Variable: <strong>User
     Option</strong> <em>cd-tool-start-command</em></dt>
     <dd>
-      <p>*Name of cdstart command; most likely either "cdstart" or
+      <p>Name of cdstart command; most likely either "cdstart" or
       "cdplay".</p>
     </dd>
   </dl>
