--- a/manual/dectalk_002dvoices.html
+++ b/manual/dectalk_002dvoices.html
@@ -79,7 +79,7 @@
         <dd><span id="index-_003cfn_003e-d-C_002dd"></span></dd>
       </dl><span id="index-dectalk-1"></span>
       <div class="format">
-        <pre class="format">Select Dectalk TTS server.
+        <pre class="format">Select Dectalk TTS.
 </pre>
       </div>
     </dd>
@@ -89,7 +89,7 @@
     <dt id="index-User-Option-2">Variable: <strong>User
     Option</strong> <em>dectalk-default-speech-rate</em></dt>
     <dd>
-      <p>*Default speech rate at which TTS is started.</p>
+      <p>Default speech rate .</p>
     </dd>
   </dl>
 </body>
