--- a/manual/dtk_002dunicode.html
+++ b/manual/dtk_002dunicode.html
@@ -135,7 +135,7 @@ When called interactively, CHAR defaults to the character after point.
     <dt id="index-User-Option-14">Variable: <strong>User
     Option</strong> <em>dtk-unicode-untouched-charsets</em></dt>
     <dd>
-      <p>*Characters of these charsets are ignored by
+      <p>Characters of these charsets are ignored by
       dtk-unicode-replace-chars.</p>
     </dd>
   </dl>
