--- a/manual/emacspeak_002dgnus.html
+++ b/manual/emacspeak_002dgnus.html
@@ -137,7 +137,7 @@
     <dt id="index-User-Option-280">Variable: <strong>User
     Option</strong> <em>emacspeak-gnus-large-article</em></dt>
     <dd>
-      <p>*Articles having more than emacspeak-gnus-large-article
+      <p>Articles having more than emacspeak-gnus-large-article
       lines will be considered to be a large article. A large
       article is not spoken all at once; instead you hear only the
       first screenful.</p>
