--- a/manual/emacspeak_002dinfo.html
+++ b/manual/emacspeak_002dinfo.html
@@ -148,7 +148,7 @@ node-spec.
     Option</strong>
     <em>emacspeak-info-select-node-speak-chunk</em></dt>
     <dd>
-      <p>*Specifies how much of the selected node gets spoken.
+      <p>Specifies how much of the selected node gets spoken.
       Possible values are: screenfull – speak the displayed screen
       node – speak the entire node.</p>
     </dd>
