--- a/manual/emacspeak_002dm_002dplayer.html
+++ b/manual/emacspeak_002dm_002dplayer.html
@@ -1699,7 +1699,7 @@ M-l             emacspeak-m-player-load-playlist
     <dt id="index-User-Option-423">Variable: <strong>User
     Option</strong> <em>emacspeak-media-location-bindings</em></dt>
     <dd>
-      <p>*Map specific key sequences to launching MPlayer
+      <p>Map specific key sequences to launching MPlayer
       accelerators on a specific directory.</p>
     </dd>
   </dl>
