--- a/manual/emacspeak_002dpronounce.html
+++ b/manual/emacspeak_002dpronounce.html
@@ -261,8 +261,7 @@ Activates pronunciation dictionaries if not already active.
       <span id=
       "index-emacspeak_002dpronounce_002dsave_002ddictionaries-1"></span>
       <div class="format">
-        <pre class=
-        "format">Writes out the persistent emacspeak pronunciation dictionaries.
+        <pre class="format">Saves  pronunciation dictionaries.
 </pre>
       </div>
     </dd>
@@ -311,8 +310,7 @@ to explicitly turn pronunciations on or off.
     Option</strong>
     <em>emacspeak-pronounce-dictionaries-file</em></dt>
     <dd>
-      <p>File that holds the persistent emacspeak pronunciation
-      dictionaries.</p>
+      <p>File that holds emacspeak pronunciations.</p>
     </dd>
   </dl>
   <dl>
